button padding correction

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <a
                                 href="mailto:shanis23nl@gmail.com"
                                 class="btn btn--raised"
-                                >Let's talk</a
+                                >Let's talk!</a
                             >
                         </li>
                     </ul>
@@ -155,7 +155,7 @@
                                     Solid understanding of business processes, gained from experience as a Sales Business Analyst
                                 </li>
                                 <li>
-                                    Skilled in data handling that enhances full-stack development (UX-driven & cost-saving), backed by data science training
+                                    Skilled in data handling that enhances full-stack development (UX-driven & cost-saving), educated with MSc in Data Science
                                 </li>
                                 <li>
                                     Strong user empathy developed through a background in sociology and art journalism
@@ -231,12 +231,6 @@
                             <p class="text">
                                 An e-shop selling tea built by React. I used hooks for state management, performed page rendering for ease of access, and created reusable UI kit
                             </p>
-                            <a
-                                href="https://windmillbrew.netlify.app/"
-                                class="btn btn--line"
-                                target="_blank"
-                                >Demo</a
-                            >
                         </div>
                     </div>
                     <div class="portfolio">
@@ -252,12 +246,6 @@
                             <p class="text">
                                 A Single Page Application (SPA) built with HTML5, CSS, and JavaScript. It allows users to select and compare conversion rate between currency pairs.
                             </p>
-                            <a
-                                href="https://currencyp.netlify.app/"
-                                class="btn btn--line"
-                                target="_blank"
-                                >Demo</a
-                            >
                         </div>
                     </div>
                  
