--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <p class="text--lg">
                                 Curious to know more? Check-out my
                                 <a href="#portfolio">portfolio</a> or
-                                <a href="mailto:shanis23nl@gmail.com">hire me</a>
+                                <a href="mailto:shanis23nl@gmail.com">have a coffee chat</a>
                             </p>
                         </div>
                     </div>
