--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         practice
                     </p>
                     <p class="text--xl">
-                        Ikebana enthusiast 💮 Techno lover 🕺🏼 Asian foodie 🍱 
+                        Ikebana enthusiast 💮 Music lover 🕺🏼 Asian foodie 🍱 
                     </p>
                     <p class="text--xl">
                         Based in Amsterdam, The Netherlands
