--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             
                         />
                         <div>
-                            <h3 class="title">A&S Vastgoed</h3>
+                            <h3 class="title">House Listing with Vue</h3>
                             <p class="text">
                                 A responsive house listing app created with Vue3. I enhanced user experience with CSS, and maintained high level of accessiblity with semantic HTML. I also optimized API data processing for web performance.
                             </p>
@@ -216,6 +216,13 @@
                                 target="_blank"
                                 >Demo</a
                             >
+                            <a
+                            href="https://github.com/shaniscode/crud-huis-vue"
+                            class="btn btn--line"
+                            target="_blank"
+                            >Code</a
+                        >
+                            
                         </div>
                     </div>
                     <div class="portfolio">
